--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
                 </ul>
         </div>
         <div class="body-one">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button>Sign up</button>
+            <div class="left">
+                <div>This website is awesome</div>
+                <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                <button>Sign up</button>
+            </div>
             <div>this is a placeholder for an image</div>
         </div>
         <div class="body-two">
