Create images directory and added sea.jpg

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 </ul>
         </div>
         <div class="body-one">
-            <div class="left">
+            <div class="text">
                 <div>This website is awesome</div>
                 <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <div>this is a placeholder for an image</div>
+            <div class="image"><img src="images/sea.jpg" alt="waves on the beach during sunset"></div>
         </div>
         <div class="body-two">
             <div>Some random information</div>
