Add sea.jpg to "body-one" and add style to it
Added proper background and font color, roughly placed children of
"body-one" on the webpage.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
         <div class="body-one">
             <div class="text">
-                <div>This website is awesome</div>
-                <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                <div class="awesome">This website is awesome</div>
+                <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <div class="image"><img src="images/sea.jpg" alt="waves on the beach during sunset"></div>
+            <div class="image"><img src="images/sea.jpg" alt="waves on the beach during sunset" width="500" height="300"></div>
         </div>
         <div class="body-two">
             <div>Some random information</div>
