--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
                 <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <div class="image"><img src="images/sea.jpg" alt="waves on the beach during sunset" width="500" height="300"></div>
+            <div><img src="images/sea.jpg" alt="waves on the beach during sunset" width="500" height="300"></div>
         </div>
         <div class="body-two">
-            <div>Some random information</div>
-            <div>this is some subtext under an illustration or image</div>
-            <div>this is some subtext under an illustration or image</div>
-            <div>this is some subtext under an illustration or image</div>
-            <div>this is some subtext under an illustration or image</div>
+            <div class="information">Some random information</div>
+            <div class="images">
+                <div class="image-1">
+                    <img src="images/flamingo.jpg" alt="flamingo">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="image-2">
+                    <img src="images/peacock.jpg" alt="peacock">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="image-3">
+                    <img src="images/penguin.jpg" alt="penguin">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="image-4">
+                    <img src="images/toucan.jpg" alt="toucan">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
         <div class="body-three">
             <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
