--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
             <div class="signature">-Thor, God of Thunder</div>
         </div>
         <div class="body-four">
-            <div>Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button over there!</div>
-            <button>Sign up</button>
+            <div class="text">
+                <div>
+                    <div class="action">Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
         <div class="footer">
             <div>Copyright © The Odin Project 2023</div>
