Add padding to "body-one" div and header

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 </ul>
         </div>
         <div class="body-one">
-            <div class="text">
-                <div class="awesome">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <div class="hero">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <div><img src="images/sea.jpg" alt="waves on the beach during sunset" width="500" height="300"></div>
+            <img src="images/sea.jpg" alt="waves on the beach during sunset" width="550" height="250">
         </div>
         <div class="body-two">
             <div class="information">Some random information</div>
