--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <img src="images/sea.jpg" alt="waves on the beach during sunset" width="550" height="250">
+            <img src="images/sea.jpg" alt="waves on the beach during sunset">
         </div>
         <div class="body-two">
             <div class="information">Some random information</div>
